# language-learning-agent

./: .env.example  .gitignore  main.py  pyproject.toml
Notebooks/: clean-word-list.ipynb
agent/: tools.py
data/English/: word-list-cleaned.json
data/Spanish/: word-list-cleaned.json
